# satlaspretrain_models

./: .gitignore  README.md  demo.ipynb  demo.py  pyproject.toml  setup.py  torchgeo_demo.ipynb
satlaspretrain_models/: .model.py.swp  __init__.py  model.py  utils.py
satlaspretrain_models/models/: __init__.py  backbones.py  fpn.py  heads.py
tests/: test_pretrained_models.py  test_randomly_initialized_models.py
